--- a/appointa/index.html
+++ b/appointa/index.html
@@ -969,8 +969,10 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;On average, recruiters
-                  are spending two-thirds of their overall hiring time on the interview process.&#8221;
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;On average,
+                  recruiters
+                  are spending two-thirds of their overall hiring time on the interview
+                  process.&#8221;
                 </p>
 
               </div>
@@ -1309,9 +1311,12 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current research, the most important function of this recruiting scheduling app would be to have a way for users to easily schedule and track their interviews on their own.&#8221;
+                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current
+                    research, the most important function of this recruiting scheduling app would be
+                    to have a way for users to easily schedule and track their interviews on their
+                    own.&#8221;
                   </p>
-  
+
                 </div>
               </div>
             </div>
@@ -1476,7 +1481,6 @@
           </div>
         </div>
 
-        <div class="blankHS"></div>
 
         <!-- Arrow -->
 
@@ -1487,32 +1491,11 @@
                 <h4 class="">
                   <p><strong>Key user flows</strong>
                   </p>
-                  <p>Hiring managers and recruiters define the <strong
-                      class="textDecor APPOINTA">interview type</strong> in this app. the
-                    candidate will be able to select a date and time and put some notes from a
-                    link
-                    that belongs to a type of the interview
-                  </p>
-                  <p>
-                    New users will set up their <strong class="textDecor APPOINTA">team</strong>
-                    and <strong class="textDecor APPOINTA">interview skills</strong> first
-                  </p>
-                  <p>
-                    Afterwards, they will add <strong class="textDecor APPOINTA">interview
-                      types</strong> with <strong class="textDecor APPOINTA">required interview
-                      skills</strong>
-                  </p>
-                  <p>
-                    Eventually, team members' interview skills and
-                    required interview <strong class="textDecor APPOINTA">skills will be
-                      matched</strong> automatically
-                  </p>
-                  <p>
-                    Interview <strong class="textDecor APPOINTA">availability</strong> and <strong
-                      class="textDecor APPOINTA">capacity</strong> depend on how many <strong
-                      class="textDecor APPOINTA">available team members</strong> with the <strong
-                      class="textDecor APPOINTA">required skills</strong> for a type of interview
-                  </p>
+                  <p>Step 1: Recruiters invite team </p>
+                  <p> Step 2: Team member create account and sync calendar </p>
+                  <p> Step 3: Create interview type, set required skillss </p>
+                  <p> Step 4: Schedule interview </p>
+ 
                 </h4>
               </div>
             </div>
@@ -1600,6 +1583,8 @@
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
             <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
+            <div class="blankHXS"></div>
+
             <h3>Administration account</h3>
             <h6>Recruiters &#47; Hiring managers</h6>
           </div>
@@ -1607,133 +1592,14 @@
 
         <div class="blankHS"></div>
 
-        <div class="wrapper">
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA"> Log in &#47; sign up </h3>
-              </div>
-            </div>
-          </div>
 
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_loginSignup.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
 
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="">Testing</h3>
-                <ul>
-                  <li>Sign up a new account</li>
-                  <li class="">Forget password </li>
-                  <li class="">Reset password</li>
-                </ul>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element"> <img class="cardAPPOINTA shadowBox"
-                  src="testingChangepassword.gif" alt="New User">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="blankHM"></div>
 
         <div class="wrapper">
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA"> Onboarding </h3>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_newAccount.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="">Testing</h3>
-                <ul>
-                  <li>Invite team members</li>
-                  <li class="">Setup team members' skills </li>
-                  <li class="">Share link with a candidate</li>
-                </ul>
-                <h3 class="">Insights</h3>
-                <ul>
-                  <li>after the link is sent, recruiters want to see the candidates' status, such
-                    as
-                    the invitation sent, account created, calendar synced, video conference app
-                    connected</li>
-                  <li>
-                    The recruiter may invite other recruiters or hiring managers to manage the
-                    account, The invitation link should not just invite members only
-                  </li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="Grid-cell">
-              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingNewUser.gif"
-                  alt="New User">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="blankHM"></div>
-
-        <div class="wrapper">
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA"> Create interview </h3>
-              </div>
-            </div>
-          </div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA"> Scheduled interview </h3>
-              </div>
-            </div>
-          </div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target"
-                  src="userflow_Recruiter_scheduledInterviews.svg" alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA"> Team </h3>
+                <h3 class="colorAPPOINTA"> Step 1: Invite team </h3>
               </div>
             </div>
           </div>
@@ -1745,6 +1611,65 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Step 2: Create interview </h3>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="userflow_Recruiter_createInterview.svg"
+                  alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Step 3: Schedule interview</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="userflow_Candidate.svg"
+                  alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="colorAPPOINTA">Step 4: Scheduled interview </h3>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target"
+                  src="userflow_Recruiter_scheduledInterviews.svg" alt="Log in or sign up">
+              </div>
+            </div>
+          </div>
+
+
+
 
           <div class="blankHS"></div>
           <div class="Grid Grid--gutters Grid--1of3">
@@ -1752,15 +1677,18 @@
               <div class="element">
                 <h3 class="">Testing</h3>
                 <ul>
-                  <li>Create a new type of interview</li>
-                  <li>Cancel a scheduled interview</li>
                   <li>Invite team members</li>
                   <li>Setup team members' skills</li>
+                  <li>Create a new type of interview</li>
+                  <li>Cancel a scheduled interview</li>
                   <li>Remove team members from the list</li>
-
                 </ul>
+                <div class="blankHXS"></div>
+ 
                 <h3 class="">Insights</h3>
                 <ul>
+                  <li>Recruiter wants to book the interview by themself</li>
+
                   <li>Ability to reschedule appointment</li>
                   <li>Ability to link to the candidate information page, or easy to scan candidate
                     information</li>
@@ -1806,6 +1734,8 @@
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
             <img class="iconM" src="ppl_teammember.png" alt="members account">
+            <div class="blankHXS"></div>
+
             <h3>Team member account</h3>
             <h6>Engineers, designers, marketing and sales, etc.</h6>
           </div>
@@ -1814,7 +1744,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA"> Sign up </h3>
+                <h3 class="colorAPPOINTA"> Step 1: open link </h3>
               </div>
             </div>
           </div>
@@ -1853,7 +1783,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA">Onboarding</h3>
+                <h3 class="colorAPPOINTA"> Step 2: create account </h3>
               </div>
             </div>
           </div>
@@ -1885,54 +1815,12 @@
             </div>
           </div>
         </div>
-        <div class="blankHL"></div>
 
-        <div class="Grid Grid--full u-textCenter">
-          <div class="Grid-cell">
-            <img class="iconM" src="ppl_candidate.png" alt="members account">
-            <h3>Candidate account</h3>
-            <h6>Engineers, designers, marketing and sales, etc.</h6>
-          </div>
-        </div>
+
+
+
+
         <div class="blankHS"></div>
-
-        <div class="wrapper">
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="colorAPPOINTA">Schedule interview</h3>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Candidate.svg"
-                  alt="Log in or sign up">
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <div class="Grid Grid--gutters Grid--1of3">
-            <div class="Grid-cell">
-              <div class="element">
-                <h3 class="">Testing</h3>
-                <ul>
-                  <li>Schedule interview</li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="Grid-cell">
-              <div class="element"> <img class="cardAPPOINTA shadowBox" src="testingCandidate.gif"
-                  alt="New User">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="blankHM"></div>
 
 
 
