--- a/about/index.html
+++ b/about/index.html
@@ -466,7 +466,7 @@
     <div class="centeredTQ">
       <h3 class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </h3>
       <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">Learn more about my works
-        &nbsp; <a class="textProject" href="/project">here</a> </h4>
+        &nbsp; <a class="textProject" href="/">here</a> </h4>
     </div>
   </div>
   <!-- my photo -->
