--- a/appointa/index.html
+++ b/appointa/index.html
@@ -208,10 +208,10 @@
       <div class="element">
         <div class="elementInner">
 
-          <h3><strong>Challenge</strong></h3>
-          <h4>The recruiter's primary focus is on finding qualified candidates for the open
-            position. However, recruiters are spending two-thirds of their overall hiring process on
-            interview scheduling on average.
+          <h3><strong>Opportunity</strong></h3>
+          <h4>The recruiter's primary focus is on finding qualified candidates for the open position
+            to fill the headcount requirement. However, recruiters are spending around two-thirds of
+            their overall hiring process on scheduling interviews.
           </h4>
 
         </div>
@@ -221,9 +221,10 @@
       <div class="element">
         <div class="elementInner">
 
-          <h3><strong>Goal</strong></h3>
-          <h4>Redefining the way recruiters arrange their appointments and invite attendees for
-            medium/large-sized business</h4>
+          <h3><strong>Problem statement</strong></h3>
+          <h4>Recruiters need a simple and straightforward way to quickly and easily schedule
+            interviews for both the hiring team and the candidate in order to achieve the company
+            hiring headcount requirement</h4>
 
         </div>
       </div>
@@ -1495,7 +1496,7 @@
                   <p> Step 2: Team member create account and sync calendar </p>
                   <p> Step 3: Create interview type, set required skillss </p>
                   <p> Step 4: Schedule interview </p>
- 
+
                 </h4>
               </div>
             </div>
@@ -1684,7 +1685,7 @@
                   <li>Remove team members from the list</li>
                 </ul>
                 <div class="blankHXS"></div>
- 
+
                 <h3 class="">Insights</h3>
                 <ul>
                   <li>Recruiter wants to book the interview by themself</li>
