--- a/appointa/index.html
+++ b/appointa/index.html
@@ -221,11 +221,10 @@
       <div class="element">
         <div class="elementInner">
 
-          <h3><strong>Problem statement</strong></h3>
-          <h4>Recruiters need a simple and straightforward way to quickly and easily schedule
+          <h3><strong>Solution</strong></h3>
+          <h4> Provide a simple and straightforward way for recruiters to quickly and easily schedule
             interviews for both the hiring team and the candidate in order to achieve the company
             hiring headcount requirement</h4>
-
         </div>
       </div>
     </div>
