--- a/appointa/index.html
+++ b/appointa/index.html
@@ -161,49 +161,25 @@
       <div class="blankMin1880"></div>
       <img class="" src="Mockup.png" alt="APPOINTA">
 
-      <div class="ProjectBannerInner displayNonePhone">
-        <div class="Grid Grid--gutters Grid--cols-4 Grid--top">
-          <div class="Grid-cell">
-            <div class="element">
-              <h5 class=""><strong class="">Duration:</strong> June -
-                August 2022</h5>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element ">
-              <h5 class=""><strong class="">Role:</strong> Product
-                strategy &#124; Research &#124; Visual</h5>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element ">
-              <h5 class=""><strong class="">Tool:</strong> Figma | VS
-                Code
-              </h5>
-            </div>
-          </div>
-          <div class="Grid-cell ">
-            <div class="">
-              <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
-                target="_blank"> <button class="button-35">Slide Decks</button></a>
-            </div>
-          </div>
-        </div>
+      <div class="ProjectBannerInner">
+        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
+        target="_blank"> <button class="button-35">Slide Decks</button></a>
       </div>
+
     </div>
     <div class="ProjectBanner displayNoneDesktop">
       <div class="blankMin1880"></div>
       <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
+      <div class="ProjectBannerInner">
+        <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
+        target="_blank"> <button class="button-35">Slide Decks</button></a>
+      </div>
 
     </div>
-
-
-
-
   </div>
   <div class="blankHXS"></div>
 
-  <div class="Grid Grid--gutters Grid--cols-3 wrapper">
+  <div class="Grid Grid--gutters Grid--cols-2 wrapper">
     <div class="Grid-cell">
       <div class="element">
         <div class="elementInner">
@@ -229,6 +205,48 @@
       </div>
     </div>
   </div>
+
+  <div class="Grid Grid--gutters Grid--cols-4 wrapper">
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="elementInner">
+
+          <h3><strong>Duration</strong></h3>
+          <h4>June - August 2022
+          </h4>
+
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="elementInner">
+
+          <h3><strong>Role</strong></h3>
+          <h4>Product strategy &#124; Research &#124; Visual</h4>
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="elementInner">
+
+          <h3><strong>Tool</strong></h3>
+          <h4>Figma | VS Code</h4>
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="elementInner">
+
+          <h3><strong>Team</strong></h3>
+          <h4>Individual work</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="blankHM"></div>
 
   <div class="colorBgAPPOINTA">
