--- a/appointa/index.html
+++ b/appointa/index.html
@@ -223,7 +223,11 @@
         <div class="elementInner">
 
           <h3><strong>Role</strong></h3>
-          <h4>Product strategy &#124; Research &#124; Visual</h4>
+          <h4>Product strategy</h4>
+          <h4>Research</h4>
+          <h4>Visual</h4>
+
+
         </div>
       </div>
     </div>
@@ -232,7 +236,10 @@
         <div class="elementInner">
 
           <h3><strong>Tool</strong></h3>
-          <h4>Figma | VS Code</h4>
+          <h4>Figma</h4>
+          <h4>Photoshop</h4>
+          <h4>VS Code</h4>
+
         </div>
       </div>
     </div>
