--- a/seer/index.html
+++ b/seer/index.html
@@ -208,7 +208,7 @@
 
         <div class="elementInner">
 
-          <h3><strong>Goal</strong></h3>
+          <h3><strong>Solution</strong></h3>
 
           <h4>A simple and easy way to track sentiment and the amount of traffic with keywords
             easily over time on Reddit </h4>
