--- a/appointa/index.html
+++ b/appointa/index.html
@@ -413,10 +413,8 @@
         <li><a href="#define">Define</a>
           <ul>
             <li class=""><a href="#keyPainPoints">Key pain points </a></li>
-            <li class=""><a href="#opportunities"> Turn Insights into Opportunities</a></li>
-            <li class=""><a href="#earlyConcepts">Early concepts </a></li>
             <li class=""><a href="#affinityMap"> Affinity diagram</a></li>
-            <li class=""><a href="#priorityMatrix"> Priority matrix</a></li>
+            <li class=""><a href="#earlyConcepts">Early concepts </a></li>
 
 
           </ul>
@@ -425,6 +423,9 @@
 
         <li><a href="#ideation">Develop</a>
           <ul>
+            <li class=""><a href="#opportunities"> Insights to opportunities</a></li>
+            <li class=""><a href="#priorityMatrix"> Priority matrix</a></li>
+
             <li class=""><a href="#useTypes">3 Persona Types</a></li>
 
 
@@ -1091,65 +1092,30 @@
       <div class="colorBgAPPOINTA">
 
 
-        <section id="opportunities">
+ 
+        <section id="affinityMap">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Turn Insights into Opportunities</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <p class="tArrow"> Affinity diagrams</p>
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <!-- Arrow -->
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
                 <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"How might we provide a
-                    better scheduling experience for the recruiting team and candidates?"</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <p class="colorAPPOINTALt specialText">How Might We &#8230;</p>
+                  <div class="Grid">
+                    <img class="modal-target" src="diagram_affinityDiagrams.svg" alt="Affinity Map">
 
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-
-                  <h4 class="">
-                    <p>&#8230;allow the recruiter to <strong class="textDecor APPOINTA">see all of
-                        the available appointment</strong> times in one place?</p>
-
-                    <p>&#8230;allow recruiter <strong class="textDecor APPOINTA">book appointments
-                        directly</strong> from a place such as a calendar?</p>
-                    <p>&#8230;let recruiters find <strong class="textDecor APPOINTA">interviewers'
-                        skill</strong> easily?</p>
-                    <p>&#8230;let the recruiting team know some colleges are <strong
-                        class="textDecor APPOINTA">not available</strong> for appointments?</p>
-                    <p>&#8230;let the <strong class="textDecor APPOINTA">team use shared time
-                        slots</strong> that all team members can access?</p>
-                    <p>&#8230;let the recruiter <strong class="textDecor APPOINTA">share the
-                        available time slots</strong> with candidates easily?</p>
-                    <p>&#8230;allow the recruiter to see when potential candidates are available at
-                      certain time and location?</p>
-                    <p>&#8230;<strong class="textDecor APPOINTA">avoid any delays</strong> in the
-                      scheduling process?</p>
-                    <p>&#8230;ensure that the <strong class="textDecor APPOINTA">interview
-                        process</strong> runs smoothly?</p>
-                    <p>&#8230;ensure that the best candidates are interviewed?</p>
-
-
-
-
-
-                  </h4>
+                  </div>
                 </div>
               </div>
             </div>
@@ -1274,79 +1240,6 @@
           </div>
           <!-- Product / Features -->
         </section>
-        <section id="affinityMap">
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Affinity diagrams</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="diagram_affinityDiagrams.svg" alt="Affinity Map">
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-        </section>
-        <section id="priorityMatrix">
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Priority matrix</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <img class="modal-target" src="diagram_priorityMatrix.svg"
-                      alt="Priority matrix">
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element">
-                  <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current
-                    research, the most important function of this recruiting scheduling app would be
-                    to have a way for users to easily schedule and track their interviews on their
-                    own.&#8221;
-                  </p>
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
       </div>
 
     </section>
@@ -1367,7 +1260,7 @@
 
               <h4><strong>Ideate</strong></h4>
               <h5>&#8226; Brainstorm solutions </h5>
-              <h5>&#8226; Highlight opportunities </h5>
+              <h5>&#8226; Prioritize opportunities </h5>
 
             </div>
           </div>
@@ -1395,7 +1288,120 @@
           </div>
         </div>
       </div>
+      <div class="blankHS"></div>
 
+      
+      
+      <section id="opportunities" class="colorBgAPPOINTA">
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Turn Insights into Opportunities</p>
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">"How might we provide a
+                  better scheduling experience for the recruiting team and candidates?"</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <p class="colorAPPOINTALt specialText">How Might We &#8230;</p>
+
+              <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+
+                <h4 class="">
+                  <p>&#8230;allow the recruiter to <strong class="textDecor APPOINTA">see all of
+                      the available appointment</strong> times in one place?</p>
+
+                  <p>&#8230;allow recruiter <strong class="textDecor APPOINTA">book appointments
+                      directly</strong> from a place such as a calendar?</p>
+                  <p>&#8230;let recruiters find <strong class="textDecor APPOINTA">interviewers'
+                      skill</strong> easily?</p>
+                  <p>&#8230;let the recruiting team know some colleges are <strong
+                      class="textDecor APPOINTA">not available</strong> for appointments?</p>
+                  <p>&#8230;let the <strong class="textDecor APPOINTA">team use shared time
+                      slots</strong> that all team members can access?</p>
+                  <p>&#8230;let the recruiter <strong class="textDecor APPOINTA">share the
+                      available time slots</strong> with candidates easily?</p>
+                  <p>&#8230;allow the recruiter to see when potential candidates are available at
+                    certain time and location?</p>
+                  <p>&#8230;<strong class="textDecor APPOINTA">avoid any delays</strong> in the
+                    scheduling process?</p>
+                  <p>&#8230;ensure that the <strong class="textDecor APPOINTA">interview
+                      process</strong> runs smoothly?</p>
+                  <p>&#8230;ensure that the best candidates are interviewed?</p>
+
+
+
+
+
+                </h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blankHS"></div>
+      </section>
+      <section id="priorityMatrix">
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Priority matrix</p>
+                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <img class="modal-target" src="diagram_priorityMatrix.svg"
+                    alt="Priority matrix">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blankHS"></div>
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextXS colorAPPOINTAYellow u-textCenter">&#8220;Based on current
+                  research, the most important function of this recruiting scheduling app would be
+                  to have a way for users to easily schedule and track their interviews on their
+                  own.&#8221;
+                </p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="useTypes">
         <!-- Arrow -->
         <div class="wrapper">
