--- a/appointa/index.html
+++ b/appointa/index.html
@@ -165,8 +165,8 @@
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=720%2C570%2C0.52&scaling=scale-down&starting-point-node-id=1714%3A9456"
         target="_blank"> <button class="button-35">Slide Decks</button></a>
       </div>
-
     </div>
+
     <div class="ProjectBanner displayNoneDesktop">
       <div class="blankMin1880"></div>
       <img class="displayNoneDesktop" src="MockupS.png" alt="APPOINTA">
@@ -212,9 +212,19 @@
         <div class="elementInner">
 
           <h3><strong>Duration</strong></h3>
-          <h4>June - August 2022
-          </h4>
+          <h4>June - August 2022 </h4>
+          <h4>10 Hours per week  </h4>
 
+        </div>
+      </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="elementInner">
+
+          <h3><strong>Team</strong></h3>
+          <h4>Concept </h4>
+          <h4>Individual work</h4>
         </div>
       </div>
     </div>
@@ -243,15 +253,7 @@
         </div>
       </div>
     </div>
-    <div class="Grid-cell">
-      <div class="element">
-        <div class="elementInner">
 
-          <h3><strong>Team</strong></h3>
-          <h4>Individual work</h4>
-        </div>
-      </div>
-    </div>
   </div>
 
   <div class="blankHM"></div>
@@ -1684,7 +1686,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="colorAPPOINTA">Step 4: Scheduled interview </h3>
+                <h3 class="colorAPPOINTA">Step 4: View interviews </h3>
               </div>
             </div>
           </div>
