--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1167,9 +1167,8 @@
                     <h4> <strong> Collaboration</strong> </h4>
 
                     <ul>
-                      <li>Recruiter easy to collaborates with his team and candidates</li>
-                      <li>Easy to share information such as availability, skills, time zone with the
-                        team</li>
+                      <li>Everyone can see the available appointments</li>
+                      <li>A way to share information such as availability, interview skills, working hour, time zone</li>
                     </ul>
                   </div>
                 </div>
@@ -1198,8 +1197,9 @@
                     <div class="blankHXS"></div>
                     <h4> <strong> Time-saving</strong> </h4>
                     <ul>
-                      <li> Finding availability should be easy</li>
-                      <li> Let the recruiter focus on finding talents not scheduling</li>
+                      <li>Book with a few clicks</li>
+                      <li>Easy to cancel&#47;reschedule users' own appointment</li>
+                      <li>Upcoming interviews in one place</li>
                     </ul>
                   </div>
                 </div>
@@ -1213,8 +1213,8 @@
 
                     <h4> <strong> Flexibility</strong> </h4>
                     <ul>
-                      <li> Everyone deals with appointment on their own</li>
-                      <li> Each party deal with their schedule</li>
+                      <li>Allow users to view available timeslots</li>
+                      <li>Allow users to make a booking on their own</li>
 
                     </ul>
                   </div>
@@ -1228,8 +1228,8 @@
 
                     <h4> <strong> Effectiveness</strong> </h4>
                     <ul>
-                      <li>Be simple and easy to use</li>
-                      <li>Be straightforward</li>
+                      <li>Offer the option to cancel or reschedule interviews</li>
+                      <li>Receive reminders for upcoming appointments</li>
 
                     </ul>
                   </div>
